Add isDoneIfNoneOfPreviousRulesApplies Test